--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/*
+
+Tailwind CSS 기본 배경 설정
+  
+  */
+  /* body {
+    background-color: #FFFFFF;
+    width: 100%;
+    height: 100%;
+  } */
