✨ [Feat] 메인페이지 레이아웃 및 화면 이동 구현

--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,12 @@
   margin: auto;
   font-family: 'Pretendard', sans-serif;
   position: relative;
+  user-select: none;
 }
 
 html,
 body,
-div{
+div {
   border-style: solid; /* border 스타일 설정 */
 }
 span,
